convert to ACM format

--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,7 @@
   url = {https://osf.io/preprints/psyarxiv/293kt/},
   }
 
-@article{wickham2014,
+@Article{wickham2014,
 	title = {Tidy Data},
 	author = {Wickham, Hadley},
 	year = {2014},
@@ -29,7 +29,7 @@
 	langid = {en}
 }
 
-@article{jun2022,
+@Article{jun2022,
 	title = {Hypothesis Formalization: Empirical Findings, Software Limitations, and Design Implications},
 	author = {Jun, Eunice and Birchfield, Melissa and De Moura, Nicole and Heer, Jeffrey and Just, {René}},
 	year = {2022},
@@ -197,7 +197,7 @@ Publisher: Sigma XI-The Scientific Research Society},
 }
 
 @inproceedings{liu2020,
-	title = {Paths Explored, Paths Omitted, Paths Obscured: Decision Points & Selective Reporting in End-to-End Data Analysis},
+	title = {Paths Explored, Paths Omitted, Paths Obscured: Decision Points \& Selective Reporting in End-to-End Data Analysis},
 	author = {Liu, Yang and Althoff, Tim and Heer, Jeffrey},
 	year = {2020},
 	month = {04},
