--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -1,31 +1,6 @@
-% Options for packages loaded elsewhere
-% Options for packages loaded elsewhere
-\PassOptionsToPackage{unicode}{hyperref}
-\PassOptionsToPackage{hyphens}{url}
-\PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
-%
-\documentclass[
-  letterpaper,
-  DIV=11,
-  numbers=noendperiod]{scrartcl}
-\usepackage{xcolor}
-\usepackage{amsmath,amssymb}
-\setcounter{secnumdepth}{5}
-\usepackage{iftex}
-\ifPDFTeX
-  \usepackage[T1]{fontenc}
-  \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provide euro and other symbols
-\else % if luatex or xetex
-  \usepackage{unicode-math} % this also loads fontspec
-  \defaultfontfeatures{Scale=MatchLowercase}
-  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
-\fi
-\usepackage{lmodern}
-\ifPDFTeX\else
-  % xetex/luatex font selection
-\fi
-% Use upquote if available, for straight quotes in verbatim environments
+\documentclass[manuscript,screen,review,anonymous]{acmart}
+
+
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \IfFileExists{microtype.sty}{% use microtype if available
   \usepackage[]{microtype}
@@ -41,30 +16,54 @@
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
 \makeatother
-% Make \paragraph and \subparagraph free-standing
-\makeatletter
-\ifx\paragraph\undefined\else
-  \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}{
-    \@ifstar
-      \xxxParagraphStar
-      \xxxParagraphNoStar
-  }
-  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
-  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-  \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}{
-    \@ifstar
-      \xxxSubParagraphStar
-      \xxxSubParagraphNoStar
-  }
-  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
-  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
-\makeatother
 
+%%
+%% This is file `sample-manuscript.tex',
+%% generated with the docstrip utility.
+%%
+%% The original source files were:
+%%
+%% samples.dtx  (with options: `manuscript')
+%% 
+%% IMPORTANT NOTICE:
+%% 
+%% For the copyright see the source file.
+%% 
+%% Any modified versions of this file must be renamed
+%% with new filenames distinct from sample-manuscript.tex.
+%% 
+%% For distribution of the original source see the terms
+%% for copying and modification in the file samples.dtx.
+%% 
+%% This generated file may be distributed as long as the
+%% original source files, as listed above, are part of the
+%% same distribution. (The sources need not necessarily be
+%% in the same archive or directory.)
+%%
+%%
+%% Commands for TeXCount
+%TC:macro \cite [option:text,text]
+%TC:macro \citep [option:text,text]
+%TC:macro \citet [option:text,text]
+%TC:envir table 0 1
+%TC:envir table* 0 1
+%TC:envir tabular [ignore] word
+%TC:envir displaymath 0 word
+%TC:envir math 0 word
+%TC:envir comment 0 0
+%%
+%%
+%% The first command in your LaTeX source must be the \documentclass command.
+
+
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+\PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
+
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+
+%% PANDOC PREAMBLE BEGINS
 
 \usepackage{longtable,booktabs,array}
 \usepackage{calc} % for calculating minipage widths
@@ -93,39 +92,6 @@
 \makeatother
 
 
-% definitions for citeproc citations
-\NewDocumentCommand\citeproctext{}{}
-\NewDocumentCommand\citeproc{mm}{%
-  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
-\makeatletter
- % allow citations to break across lines
- \let\@cite@ofmt\@firstofone
- % avoid brackets around text for \cite:
- \def\@biblabel#1{}
- \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
-\makeatother
-\newlength{\cslhangindent}
-\setlength{\cslhangindent}{1.5em}
-\newlength{\csllabelwidth}
-\setlength{\csllabelwidth}{3em}
-\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
- {\begin{list}{}{%
-  \setlength{\itemindent}{0pt}
-  \setlength{\leftmargin}{0pt}
-  \setlength{\parsep}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1
-   \setlength{\leftmargin}{\cslhangindent}
-   \setlength{\itemindent}{-1\cslhangindent}
-  \fi
-  % set entry spacing
-  \setlength{\itemsep}{#2\baselineskip}}}
- {\end{list}}
-\usepackage{calc}
-\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
-\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
-\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
-\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
 
@@ -137,9 +103,11 @@
 
 
  
+\usepackage[]{natbib}
+\bibliographystyle{plainnat}
 
 
-\KOMAoption{captions}{tableheading}
+\definecolor{mypink}{RGB}{219, 48, 122}
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -181,28 +149,160 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\usepackage{bookmark}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\urlstyle{same}
+%% PANDOC PREAMBLE ENDS
+
+\setlength{\parindent}{10pt}
+\setlength{\parskip}{0pt}
+
 \hypersetup{
-  pdftitle={Analysing decisions in data analysis},
+  pdftitle={The Name of the Title Is Hope},
+  pdfauthor={H. Sherry Zhang; Roger D. Peng},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
   citecolor={Blue},
-  urlcolor={Blue},
-  pdfcreator={LaTeX via pandoc}}
+  urlcolor={red},
+  pdfcreator={LaTeX via pandoc, via quarto}}
+
+%% \BibTeX command to typeset BibTeX logo in the docs
+\AtBeginDocument{%
+  \providecommand\BibTeX{{%
+    Bib\TeX}}}
+
+%% Rights management information.  This information is sent to you
+%% when you complete the rights form.  These commands have SAMPLE
+%% values in them; it is your responsibility as an author to replace
+%% the commands and values with those provided to you when you
+%% complete the rights form.
+\setcopyright{acmcopyright}
+\copyrightyear{2025}
+\acmYear{2025}
+\acmDOI{XXXXXXX.XXXXXXX}
+
+%% These commands are for a PROCEEDINGS abstract or paper.
+\acmConference[CHI'26]{CHI Conference on Human Factors in Computing
+Systems}{Apr 13--17, 2026}{Barcelona, Spain}
+\acmPrice{}
+\acmISBN{978-1-4503-XXXX-X/18/06}
+
+%% Submission ID.
+%% Use this when submitting an article to a sponsored event. You'll
+%% receive a unique submission ID from the organizers
+%% of the event, and this ID should be used as the parameter to this command.
+%%\acmSubmissionID{123-A56-BU3}
+
+%%
+%% For managing citations, it is recommended to use bibliography
+%% files in BibTeX format.
+%%
+%% You can then either use BibTeX with the ACM-Reference-Format style,
+%% or BibLaTeX with the acmnumeric or acmauthoryear sytles, that include
+%% support for advanced citation of software artefact from the
+%% biblatex-software package, also separately available on CTAN.
+%%
+%% Look at the sample-*-biblatex.tex files for templates showcasing
+%% the biblatex styles.
+%%
+
+%%
+%% The majority of ACM publications use numbered citations and
+%% references.  The command \citestyle{authoryear} switches to the
+%% "author year" style.
+%%
+%% If you are preparing content for an event
+%% sponsored by ACM SIGGRAPH, you must use the "author year" style of
+%% citations and references.
+%% Uncommenting
+%% the next command will enable that style.
+%%\citestyle{acmauthoryear}
 
 
-\title{Analysing decisions in data analysis}
-\author{H. Sherry Zhang \and Roger D. Peng}
-\date{}
+%% end of the preamble, start of the body of the document source.
 \begin{document}
-\maketitle
+
+
+%%
+%% The "title" command has an optional parameter,
+%% allowing the author to define a "short title" to be used in page headers.
+\title[Hope]{The Name of the Title Is Hope}
+
+%%
+%% The "author" command and its associated commands are used to define
+%% the authors and their affiliations.
+%% Of note is the shared affiliation of the first two authors, and the
+%% "authornote" and "authornotemark" commands
+%% used to denote shared contribution to the research.
+
+
+  \author{H. Sherry Zhang}
+  
+            \affiliation{%
+                  \institution{University of Texas at Austin}
+                                  \city{Austin}
+                                  \country{USA}
+                      }
+        \author{Roger D. Peng}
+  
+            \affiliation{%
+                  \institution{University of Texas at Austin}
+                                  \city{Austin}
+                                  \country{USA}
+                      }
+      
+
+%% By default, the full list of authors will be used in the page
+%% headers. Often, this list is too long, and will overlap
+%% other information printed in the page headers. This command allows
+%% the author to define a more concise list
+%% of authors' names for this purpose.
+%\renewcommand{\shortauthors}{Trovato et al.}
+%%  
+%% The abstract is a short summary of the work to be presented in the
+%% article.
 \begin{abstract}
-this is the abstract
+bla blabla    
 \end{abstract}
 
+%%
+%% The code below is generated by the tool at http://dl.acm.org/ccs.cfm.
+%% Please copy and paste the code instead of the example below.
+%%
+\begin{CCSXML}
+<ccs2012>
+ <concept>
+    <concept_id>10010405.10010497.10010504.10010505</concept_id>
+    <concept_desc>Applied computing~Document analysis</concept_desc>
+    <concept_significance>300</concept_significance>
+    </concept>
+  <concept>
+    <concept_id>10010405.10010432.10010437.10010438</concept_id>
+    <concept_desc>Applied computing~Environmental sciences</concept_desc>
+    <concept_significance>500</concept_significance>
+    </concept>
+   <concept>
+    <concept_id>10003120.10003121.10003126</concept_id>
+    <concept_desc>Human-centered computing~HCI theory, concepts and models</concept_desc>
+    <concept_significance>500</concept_significance>
+    </concept>
+</ccs2012>
+\end{CCSXML}
+
+\ccsdesc[300]{Applied computing~Document analysis}
+\ccsdesc[500]{Applied computing~Environmental sciences}
+\ccsdesc[500]{Human-centered computing~HCI theory, concepts and models}
+
+%%
+%% Keywords. The author(s) should pick words that accurately describe
+%% the work being presented. Separate the keywords with commas.
+\keywords{Large language models}
+
+
+%%
+%% This command processes the author and affiliation and title
+%% information and builds the first part of the formatted document.
+\maketitle
+
+\setlength{\parskip}{-0.1pt}
 
 \section{Introduction}\label{introduction}
 
@@ -227,41 +327,36 @@ provide for their choices.
 
 Data analysis as an complicated, iterative process to make sense
 {[}ref{]} of the data collected. The iterative process of formulating
-hypothesis Jun et al. (\citeproc{ref-jun2022}{2022}).
+hypothesis \citet{jun2022}.
 
 Choices are made at nearly every stage of data analysis, ranging from
 variable pre-processing variables, variable and lag selection in model
 formulation, to the specification of smoothing parameter during model
-construction. These possible choices contribute to what Gelman and Loken
-(\citeproc{ref-gelman2014}{2014}) describe as the ``garden of forking
-paths''. These choices can introduce substantial variability in results,
-which has been demonstrated in many-analyst experiments, where
-independent teams analyzing the same dataset to answer a pre-defined
-research question often arrive at markedly different conclusions. A
-prominent example is Silberzahn et al.
-(\citeproc{ref-silberzahn2018}{2018}) where researchers reported a wide
-range of point estimates and 95\% confidence intervals for the effect of
-soccer players' skin tone on the number of red cards awarded by referees
-(odds ratio from 0.89 to 2.93). Similar findings have emerged in other
-domains, including structural equation modeling
-(\citeproc{ref-sarstedt2024}{Sarstedt et al. 2024}), applied
-microeconomics (\citeproc{ref-huntington-klein2021}{Huntington-Klein et
-al. 2021}), neuroimaging
-(\citeproc{ref-botvinik-nezer2020}{Botvinik-Nezer et al. 2020}), and
-ecology and evolutionary biology (\citeproc{ref-gould2025}{Gould et al.
-2025}).
+construction. These possible choices contribute to what
+\citet{gelman2014} describe as the ``garden of forking paths''. These
+choices can introduce substantial variability in results, which has been
+demonstrated in many-analyst experiments, where independent teams
+analyzing the same dataset to answer a pre-defined research question
+often arrive at markedly different conclusions. A prominent example is
+\citet{silberzahn2018} where researchers reported a wide range of point
+estimates and 95\% confidence intervals for the effect of soccer
+players' skin tone on the number of red cards awarded by referees (odds
+ratio from 0.89 to 2.93). Similar findings have emerged in other
+domains, including structural equation modeling \citep{sarstedt2024},
+applied microeconomics \citep{huntington-klein2021}, neuroimaging
+\citep{botvinik-nezer2020}, and ecology and evolutionary biology
+\citep{gould2025}.
 
 Another line of work focuses on developing software tools to support
 analysts in making more informed decisions. For example, the
-\texttt{Tisane} package (\citeproc{ref-jun2022}{Jun et al. 2022})
-integrates conceptual ideas, such as DAGs, and modelling structure
-(group/ cluster/ hierarchical structure), to assist junior researchers
-in specifying GLM and GLMM model. The \texttt{DeclareDesign} package
-(\citeproc{ref-blair2019}{Blair et al. 2019}) introduces the MIDA
-framework for researchers to declare, diagnose, and redesign their
-analyses to produce a distribution of the statistic of interest. This
-approach has been applied in randomized controlled trial
-(\citeproc{ref-bishop2024}{Bishop and Hulme 2024}) .
+\texttt{Tisane} package \citep{jun2022} integrates conceptual ideas,
+such as DAGs, and modelling structure (group/ cluster/ hierarchical
+structure), to assist junior researchers in specifying GLM and GLMM
+model. The \texttt{DeclareDesign} package \citep{blair2019} introduces
+the MIDA framework for researchers to declare, diagnose, and redesign
+their analyses to produce a distribution of the statistic of interest.
+This approach has been applied in randomized controlled trial
+\citep{bishop2024} .
 
 The \texttt{multiverse} package
 
@@ -281,29 +376,28 @@ Study decisions in data analysis:
 \tightlist
 \item
   interview analysts and researchers to provide recommendation for data
-  analysis practices (\citeproc{ref-kale2019}{Kale, Kay, and Hullman
-  2019}; \citeproc{ref-alspaugh2019}{Alspaugh et al. 2019};
-  \citeproc{ref-liu2020}{Yang Liu, Althoff, and Heer 2020}).
+  analysis practices \citep{kale2019, alspaugh2019, liu2020}.
 \item
-  Yang Liu, Althoff, and Heer (\citeproc{ref-liu2020}{2020}) provides
-  visualization to communicate the decision processes through the
-  Analytic Decision Graphs (ADG)
+  \citet{liu2020} provides visualization to communicate the decision
+  processes through the Analytic Decision Graphs (ADG)
 \item
-  Simson et al. (\citeproc{ref-simson2025}{2025}) conducts a
-  participatory AI study to demonstrate the ``garden of forking paths''
-  of decisions in data analysis and how it affects ML fairness
+  \citet{simson2025} conducts a participatory AI study to demonstrate
+  the ``garden of forking paths'' of decisions in data analysis and how
+  it affects ML fairness
 \end{itemize}
 
-\subsection{Recording decisions in data
-analysis}\label{recording-decisions-in-data-analysis}
+\section{Extracting decisions from data
+analysis}\label{extracting-decisions-from-data-analysis}
+
+\subsection{Decisions in data analysis}\label{sec-decisions}
 
 \begin{itemize}
 \tightlist
 \item
-  give example from extracting decision from sentences of a paper
+  what constitute a decision in data analysis
 \item
-  adapt from the tidy data principle - each row is a decision Wickham
-  (\citeproc{ref-wickham2014}{2014})\\
+  adapt from the tidy data principle - each row is a decision
+  \citet{wickham2014}
 \item
   some decisions are related to how the variable is estimated spatially
   and temporally
@@ -312,14 +406,10 @@ analysis}\label{recording-decisions-in-data-analysis}
   multi-site analyses) and/or temporally (different treatments for years
   or seasons)
 \item
-  sometimes the decisions are not explicitly stated in the paper (use
-  AIC to choose the degree of freedom in a smoothing spline)
-\item
-  sometimes the reason is not explicitly stated (e.g., why 3 degree of
-  freedom)
+  extract the exact text from the paper
 \end{itemize}
 
-A hypothetical database of decisions may look as follows:
+An example decisions may look as follows:
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\linewidth - 16\tabcolsep) * \real{0.1111}}
@@ -367,51 +457,128 @@ for variation among cities & separate regression models fit in each
 city \\
 \end{longtable}
 
+However, decisions statements are often implicit, and the justifications
+may not directly align with the decisions themselves. We identify four
+common anomalies:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{Authors may combine multiple decisions into a single sentence}
+  for coherence and conciseness of the writing. Consider the following
+  excerpt from \citet{ostro2006}:
+\end{enumerate}
+
+\begin{quote}
+Other covariates, such as day of the week and smoothing splines of 1-day
+lags of average temperature and humidity (each with 3 df), were also
+included in the model because they may be associated with daily
+mortality and are likely to vary over time in concert with air pollution
+levels.
+\end{quote}
+
+This sentence contains four decisions: two for temperature (the temporal
+lag and the smoothing spline parameter) and two for humidity. These
+decisions should be structured as separate entries.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  \textbf{The justification does not directly address the decision
+  choice.} In the example above, the stated rationale (``and are likely
+  to vary over time in concert with air pollution levels'') supports the
+  general inclusion of temporal lags but does not justify the specific
+  choice of 1-day lag over alternatives, such as 2-day average of lags 0
+  and 1 (lag01) and single-day lag of 2 days (lag2). As such, the reason
+  field should be recorded as NA.
+\item
+  \textbf{Some decisions may be omitted because they are data-driven}.
+  For instance, \citet{katsouyanni2001} states:
+\end{enumerate}
+
+\begin{quote}
+The inclusion of lagged weather variables and the choice of smoothing
+parameters for all of the weather variables were done by minimizing
+Akaike's information criterion.
+\end{quote}
+
+In this case, while the method of selection (minimizing AIC) is
+specified, the actual degree of freedom used is not. Such data-driven
+decisions may be recorded with ``NA'' in the decision field, but the
+reason field should still be recorded as ``by minimizing Akaike's
+information criterion''
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{3}
+\tightlist
+\item
+  \textbf{Information required to interpret the decision may be
+  distributed across multiple sections}. In the previous example,
+  ``weather variables'' refers to mean temperature and relative
+  humidity, as defined earlier in the text. This requires
+  cross-referencing across sections to identify the correct variables
+  associated with each modeling choice.
+\end{enumerate}
+
 \subsection{Automatic reading of literature with
-LLM}\label{automatic-reading-of-literature-with-llm}
+LLMs}\label{automatic-reading-of-literature-with-llms}
+
+While decisions can be extracted manually from the literature, this
+process is labor-intensive and time-consuming. Recent advances in Large
+Language Models (LLMs) have demonstrated potential for automating the
+extraction of structured information from unstructured text {[}ref{]}.
+In this work, we use LLMs to automatically identify decisions made by
+authors during their data analysis processes.
+
+Text recognition from PDF document relies on Optical Character
+Recognition (OCR) to convert scanned images into machine-readable text
+-- capability currently offered by Antropic Claude and Google Gemini. We
+instruct the LLM to generate a markdown file containing a JSON block
+that records extracted decisions, which can then be read into
+statistical software for further analysis. The exact prompt feed to the
+LLM is provided in the Appendix. The \texttt{ellmer} package
+\citep{ellmer} in R is used to connect to the Gemini and Claude API,
+providing the PDF attachment and the prompt in a markdown file as
+inputs. \textbf{?@fig-llm} shows the overall workflow for decision
+extract using LLMs.
+
+\subsection{Review the LLM output}\label{review-the-llm-output}
 
 \begin{itemize}
 \tightlist
 \item
-  We use LLM to automatic process the literature to output analysis
-  decisions. Currently, two LLMs, Antropic Claude and Google Gemini, are
-  able to take input of pdf documents and the results reported in this
-  paper is based on Gemini's output. See the section sensitivity
-  analysis for the comparison of the two models.
+  something about result validation of LLM output
 \item
-  Claude is decoder only, Gemini is an encoder--decoder model
-
-  \begin{itemize}
-  \tightlist
-  \item
-    these models may paraphrase or hallucinate unless explicitly told
-    not to since it is generative in nature based on the predicted
-    probability of the next word from the text and the instruction
-  \end{itemize}
-\item
-  prompt: instruct the LLM to produce a markdown file with decisions
-  included in a JSON block with the fields described in Section xxx
-\item
-  use the \texttt{ellmer} package (\citeproc{ref-ellmer}{Wickham, Cheng,
-  and Jacobs 2025}) to connect to Gemini API to process the pdf
-  documents in R.
-\item
-  experiment with seed and temperature
-\item
-  Our task involve a reasoning component in that it requires casual
-  reasoning to identify the decisions made by the authors, and its
-  justification/ rationale, rather than purely summarizing the text
-  through pattern-matching.
+  The sensitivity of the two models to the prompt and the model
+  parameters, such as temperature and seed, is discussed in
+  Section~\ref{sec-sensitivity}.
 \end{itemize}
 
-\subsection{Review the LLM output}\label{review-the-llm-output}
+The shiny app is designed to provide users a visual interface to review
+and edit the decisions extracted by the LLM from the literature. The app
+allows three actions from the users: 1) \emph{overwrite} -- modify the
+content of a particular cell, equivalently
+\texttt{dplyr::mutate(xxx\ =\ ifelse(CONDITION,\ "yyy"\ ,\ xxx))}, 2)
+\emph{delete} -- remove a particular cell,
+\texttt{dplyr::filter(!(CONDITION))}, and 3) \emph{add} -- manually
+enter a decision, \texttt{dplyr::bind\_rows()}. Figure~\ref{fig-shiny}
+illustrates the \emph{overwrite} action in the Shiny application, where
+users interactively filter the data and preview the rows affected by
+their edits---in this case, changing the model entry from ``generalized
+additive Poisson time series regression'' to the less verbose ``Poisson
+regression''. Upon confirmation, the corresponding \texttt{tidyverse}
+code is generated, and users can download the edited table and
+incorporate the code into their R script.
 
 \phantomsection\label{cell-fig-shiny}
 \begin{figure}[H]
 
 \centering{
 
-\includegraphics[width=23.04in,height=\textheight,keepaspectratio]{figures/shiny.png}
+\includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{figures/shiny.png}
 
 }
 
@@ -434,31 +601,8 @@ the Download CSV button.}
 \href{https://huizezhang-sherry.github.io/paper-decisions/index.qmd.html}{Article
 Notebook}}
 
-\begin{itemize}
-\tightlist
-\item
-  something about result validation of LLM output
-\end{itemize}
-
-The shiny app is designed to provide users a visual interface to review
-and edit the decisions extracted by the LLM from the literature. The app
-allows three actions from the users: 1) \emph{overwrite} -- modify the
-content of a particular cell, equivalently
-\texttt{dplyr::mutate(xxx\ =\ ifelse(CONDITION,\ "yyy"\ ,\ xxx))}, 2)
-\emph{delete} -- remove a particular cell,
-\texttt{dplyr::filter(!(CONDITION))}, and 3) \emph{add} -- manually
-enter a decision, \texttt{dplyr::bind\_rows()}. Figure~\ref{fig-shiny}
-illustrates the \emph{overwrite} action in the Shiny application, where
-users interactively filter the data and preview the rows affected by
-their edits---in this case, changing the model entry from ``generalized
-additive Poisson time series regression'' to the less verbose ``Poisson
-regression''. Upon confirmation, the corresponding \texttt{tidyverse}
-code is generated, and users can download the edited table and
-incorporate the code into their R script.
-
-\subsection{Decision quality summary}\label{decision-quality-summary}
-
-\section{Calculate paper similarity}\label{calculate-paper-similarity}
+\section{Calculating paper
+similarity}\label{calculating-paper-similarity}
 
 \begin{itemize}
 \tightlist
@@ -503,31 +647,11 @@ incorporate the code into their R script.
   their similarity on decision choices
 \end{itemize}
 
-\subsection{Sensitivity analysis}\label{sensitivity-analysis}
+\section{Results}\label{results}
 
-sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM
-parameters
+\subsection{Air pollution mortality modelling}\label{sec-result}
 
-\begin{itemize}
-\item
-  standard \texttt{BERT} (\citeproc{ref-devlin2019}{Devlin et al.
-  2019}), \texttt{Roberta} (\citeproc{ref-liu}{Yinhan Liu et al.,
-  n.d.}): trained on a much larger dataset (160GB v.s. BERT's 15GB),
-  \texttt{transformer-xl} (\citeproc{ref-dai}{Dai et al., n.d.}),
-  \texttt{xlnet} by Google Brain (\citeproc{ref-yang}{Yang et al.,
-  n.d.}), and two domain-trained BERT models: \texttt{sciBert}
-  (\citeproc{ref-beltagy2019}{Beltagy, Lo, and Cohan 2019}) and
-  \texttt{bioBert}(\citeproc{ref-lee2020}{Lee et al. 2020}), trained on
-  PubMed and PMC data.
-\item
-  A section on reproducibility of LLM outputs: prompt experiment (see if
-  there are papers discussing this: https://arxiv.org/pdf/2406.06608)
-\end{itemize}
-
-\section{Applications}\label{applications}
-
-\subsection{Air pollution mortality
-modelling}\label{air-pollution-mortality-modelling}
+Decision quality summary
 
 \begin{itemize}
 \tightlist
@@ -541,8 +665,23 @@ modelling}\label{air-pollution-mortality-modelling}
   visualize the database through \texttt{sigma.js}
 \end{itemize}
 
-\subsection{Species distribution
-modelling}\label{species-distribution-modelling}
+\subsection{Sensitivity analysis}\label{sec-sensitivity}
+
+sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM
+parameters
+
+\begin{itemize}
+\item
+  standard \texttt{BERT} \citep{devlin2019}, \texttt{Roberta}
+  \citep{liu}: trained on a much larger dataset (160GB v.s. BERT's
+  15GB), \texttt{transformer-xl} \citep{dai}, \texttt{xlnet} by Google
+  Brain \citep{yang}, and two domain-trained BERT models:
+  \texttt{sciBert} \citep{beltagy2019} and
+  \texttt{bioBert}\citep{lee2020}, trained on PubMed and PMC data.
+\item
+  A section on reproducibility of LLM outputs: prompt experiment (see if
+  there are papers discussing this: https://arxiv.org/pdf/2406.06608)
+\end{itemize}
 
 \section{Discussion}\label{discussion}
 
@@ -563,150 +702,27 @@ modelling}\label{species-distribution-modelling}
   Validation of the output:
 \end{itemize}
 
-\section*{Reference}\label{reference}
-\addcontentsline{toc}{section}{Reference}
+the nature of the task: Our task involve a reasoning component in that
+it requires casual reasoning to identify the decisions made by the
+authors, and its justification/ rationale, rather than purely
+summarizing the text through pattern-matching.
 
-\phantomsection\label{refs}
-\begin{CSLReferences}{1}{0}
-\bibitem[\citeproctext]{ref-alspaugh2019}
-Alspaugh, Sara, Nava Zokaei, Andrea Liu, Cindy Jin, and Marti A. Hearst.
-2019. {``Futzing and Moseying: Interviews with Professional Data
-Analysts on Exploration Practices.''} \emph{IEEE Transactions on
-Visualization and Computer Graphics} 25 (1): 22--31.
-\url{https://doi.org/10.1109/TVCG.2018.2865040}.
+\bibliographystyle{ACM-Reference-Format}
+\bibliography{references.bib}
 
-\bibitem[\citeproctext]{ref-beltagy2019}
-Beltagy, Iz, Kyle Lo, and Arman Cohan. 2019. {``Proceedings of the 2019
-Conference on Empirical Methods in Natural Language Processing and the
-9th International Joint Conference on Natural Language Processing
-(EMNLP-IJCNLP).''} In, 3613--18. Hong Kong, China: Association for
-Computational Linguistics. \url{https://doi.org/10.18653/v1/D19-1371}.
+\renewcommand{\bibsection}{}
+\bibliography{references.bib}
 
-\bibitem[\citeproctext]{ref-bishop2024}
-Bishop, Dorothy V. M., and Charles Hulme. 2024. {``When Alternative
-Analyses of the Same Data Come to Different Conclusions: A Tutorial
-Using DeclareDesign With a Worked Real-World Example.''} \emph{Advances
-in Methods and Practices in Psychological Science} 7 (3):
-25152459241267904. \url{https://doi.org/10.1177/25152459241267904}.
-
-\bibitem[\citeproctext]{ref-blair2019}
-Blair, Graeme, Jasper Cooper, Alexander Coppock, and Macartan Humphreys.
-2019. {``Declaring and Diagnosing Research Designs.''} \emph{American
-Political Science Review} 113 (3): 838--59.
-\url{https://doi.org/10.1017/S0003055419000194}.
-
-\bibitem[\citeproctext]{ref-botvinik-nezer2020}
-Botvinik-Nezer, Rotem, Felix Holzmeister, Colin F. Camerer, Anna Dreber,
-Juergen Huber, Magnus Johannesson, Michael Kirchler, et al. 2020.
-{``Variability in the Analysis of a Single Neuroimaging Dataset by Many
-Teams.''} \emph{Nature} 582 (7810): 84--88.
-\url{https://doi.org/10.1038/s41586-020-2314-9}.
-
-\bibitem[\citeproctext]{ref-dai}
-Dai, Zihang, Zhilin Yang, Yiming Yang, Jaime Carbonell, Quoc V. Le, and
-Ruslan Salakhutdinov. n.d. {``Transformer-XL: Attentive Language Models
-Beyond a Fixed-Length Context.''}
-\url{https://doi.org/10.48550/arXiv.1901.02860}.
-
-\bibitem[\citeproctext]{ref-devlin2019}
-Devlin, Jacob, Ming-Wei Chang, Kenton Lee, and Kristina Toutanova. 2019.
-{``NAACL-HLT 2019.''} In, edited by Jill Burstein, Christy Doran, and
-Thamar Solorio, 41714186. Minneapolis, Minnesota: Association for
-Computational Linguistics. \url{https://doi.org/10.18653/v1/N19-1423}.
-
-\bibitem[\citeproctext]{ref-gelman2014}
-Gelman, Andrew, and Eric Loken. 2014. {``The Statistical Crisis in
-Science.''} \emph{American Scientist} 102 (6): 460--65.
-\url{https://www.proquest.com/docview/1616141998/abstract/5E050DCE82414037PQ/1}.
-
-\bibitem[\citeproctext]{ref-gould2025}
-Gould, Elliot, Hannah S. Fraser, Timothy H. Parker, Shinichi Nakagawa,
-Simon C. Griffith, Peter A. Vesk, Fiona Fidler, et al. 2025. {``Same
-Data, Different Analysts: Variation in Effect Sizes Due to Analytical
-Decisions in Ecology and Evolutionary Biology.''} \emph{BMC Biology} 23
-(1): 35. \url{https://doi.org/10.1186/s12915-024-02101-x}.
-
-\bibitem[\citeproctext]{ref-huntington-klein2021}
-Huntington-Klein, Nick, Andreu Arenas, Emily Beam, Marco Bertoni,
-Jeffrey R. Bloem, Pralhad Burli, Naibin Chen, et al. 2021. {``The
-Influence of Hidden Researcher Decisions in Applied Microeconomics.''}
-\emph{Economic Inquiry} 59 (3): 944--60.
-\url{https://doi.org/10.1111/ecin.12992}.
-
-\bibitem[\citeproctext]{ref-jun2022}
-Jun, Eunice, Melissa Birchfield, Nicole De Moura, Jeffrey Heer, and René
-Just. 2022. {``Hypothesis Formalization: Empirical Findings, Software
-Limitations, and Design Implications.''} \emph{ACM Transactions on
-Computer-Human Interaction} 29 (1): 1--28.
-\url{https://doi.org/10.1145/3476980}.
-
-\bibitem[\citeproctext]{ref-kale2019}
-Kale, Alex, Matthew Kay, and Jessica Hullman. 2019. {``Decision-Making
-Under Uncertainty in Research Synthesis: Designing for the Garden of
-Forking Paths.''} In, 114. CHI '19. New York, NY, USA: Association for
-Computing Machinery. \url{https://doi.org/10.1145/3290605.3300432}.
-
-\bibitem[\citeproctext]{ref-lee2020}
-Lee, Jinhyuk, Wonjin Yoon, Sungdong Kim, Donghyeon Kim, Sunkyu Kim, Chan
-Ho So, and Jaewoo Kang. 2020. {``BioBERT: A Pre-Trained Biomedical
-Language Representation Model for Biomedical Text Mining.''} Edited by
-Jonathan Wren. \emph{Bioinformatics} 36 (4): 1234--40.
-\url{https://doi.org/10.1093/bioinformatics/btz682}.
-
-\bibitem[\citeproctext]{ref-liu2020}
-Liu, Yang, Tim Althoff, and Jeffrey Heer. 2020. {``Paths Explored, Paths
-Omitted, Paths Obscured: Decision Points \& Selective Reporting in
-End-to-End Data Analysis.''} In, 114. CHI '20. New York, NY, USA:
-Association for Computing Machinery.
-\url{https://doi.org/10.1145/3313831.3376533}.
-
-\bibitem[\citeproctext]{ref-liu}
-Liu, Yinhan, Myle Ott, Naman Goyal, Jingfei Du, Mandar Joshi, Danqi
-Chen, Omer Levy, Mike Lewis, Luke Zettlemoyer, and Veselin Stoyanov.
-n.d. {``RoBERTa: A Robustly Optimized BERT Pretraining Approach.''}
-\url{https://doi.org/10.48550/arXiv.1907.11692}.
-
-\bibitem[\citeproctext]{ref-sarstedt2024}
-Sarstedt, Marko, Susanne J. Adler, Christian M. Ringle, Gyeongcheol Cho,
-Adamantios Diamantopoulos, Heungsun Hwang, and Benjamin D. Liengaard.
-2024. {``Same Model, Same Data, but Different Outcomes: Evaluating the
-Impact of Method Choices in Structural Equation Modeling.''}
-\emph{Journal of Product Innovation Management} 41 (6): 1100--1117.
-\url{https://doi.org/10.1111/jpim.12738}.
-
-\bibitem[\citeproctext]{ref-silberzahn2018}
-Silberzahn, R., E. L. Uhlmann, D. P. Martin, P. Anselmi, F. Aust, E.
-Awtrey, Š. Bahník, et al. 2018. {``Many Analysts, One Data Set: Making
-Transparent How Variations in Analytic Choices Affect Results.''}
-\emph{Advances in Methods and Practices in Psychological Science} 1 (3):
-337--56. \url{https://doi.org/10.1177/2515245917747646}.
-
-\bibitem[\citeproctext]{ref-simson2025}
-Simson, Jan, Fiona Draxler, Samuel Mehr, and Christoph Kern. 2025.
-{``Preventing Harmful Data Practices by Using Participatory Input to
-Navigate the Machine Learning Multiverse.''} In, 130. CHI '25. New York,
-NY, USA: Association for Computing Machinery.
-\url{https://doi.org/10.1145/3706598.3713482}.
-
-\bibitem[\citeproctext]{ref-wickham2014}
-Wickham, Hadley. 2014. {``Tidy Data.''} \emph{Journal of Statistical
-Software} 59 (September): 1--23.
-\url{https://doi.org/10.18637/jss.v059.i10}.
-
-\bibitem[\citeproctext]{ref-ellmer}
-Wickham, Hadley, Joe Cheng, and Aaron Jacobs. 2025. \emph{Ellmer: Chat
-with Large Language Models}.
-\url{https://CRAN.R-project.org/package=ellmer}.
-
-\bibitem[\citeproctext]{ref-yang}
-Yang, Zhilin, Zihang Dai, Yiming Yang, Jaime Carbonell, Ruslan
-Salakhutdinov, and Quoc V. Le. n.d. {``XLNet: Generalized Autoregressive
-Pretraining for Language Understanding.''}
-\url{https://doi.org/10.48550/arXiv.1906.08237}.
-
-\end{CSLReferences}
-
-
-
+%% begin pandoc before-bib
+%% end pandoc before-bib
+%% begin pandoc biblio
+%% end pandoc biblio
+%% begin pandoc include-after
+%% end pandoc include-after
+%% begin pandoc after-body
+%% end pandoc after-body
 
 \end{document}
+\endinput
+%%
+%% End of file `sample-manuscript.tex'.
