--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -15,7 +15,7 @@
   url = {https://osf.io/preprints/psyarxiv/293kt/},
   }
 
-@article{wickham2014,
+@Article{wickham2014,
 	title = {Tidy Data},
 	author = {Wickham, Hadley},
 	year = {2014},
@@ -29,7 +29,7 @@
 	langid = {en}
 }
 
-@article{jun2022,
+@Article{jun2022,
 	title = {Hypothesis Formalization: Empirical Findings, Software Limitations, and Design Implications},
 	author = {Jun, Eunice and Birchfield, Melissa and De Moura, Nicole and Heer, Jeffrey and Just, {René}},
 	year = {2022},
@@ -197,7 +197,7 @@ Publisher: Sigma XI-The Scientific Research Society},
 }
 
 @inproceedings{liu2020,
-	title = {Paths Explored, Paths Omitted, Paths Obscured: Decision Points & Selective Reporting in End-to-End Data Analysis},
+	title = {Paths Explored, Paths Omitted, Paths Obscured: Decision Points \& Selective Reporting in End-to-End Data Analysis},
 	author = {Liu, Yang and Althoff, Tim and Heer, Jeffrey},
 	year = {2020},
 	month = {04},
@@ -299,4 +299,48 @@ Publisher: Sigma XI-The Scientific Research Society},
 	number = {1},
 	doi = {10.1109/TVCG.2018.2865040},
 	url = {https://ieeexplore.ieee.org/document/8440815}
+}
+
+@article{ostro2007,
+	title = {The Effects of Components of Fine Particulate Air Pollution on Mortality in California: Results from CALFINE},
+	author = {Ostro, Bart and Feng, Wen-Ying and Broadwin, Rachel and Green, Shelley and Lipsett, Michael},
+	year = {2007},
+	month = {01},
+	date = {2007-01},
+	journal = {Environmental Health Perspectives},
+	pages = {13--19},
+	volume = {115},
+	number = {1},
+	doi = {10.1289/ehp.9281},
+	url = {https://ehp.niehs.nih.gov/doi/10.1289/ehp.9281},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{ostro2006,
+	title = {Fine Particulate Air Pollution and Mortality in Nine California Counties: Results from CALFINE},
+	author = {Ostro, Bart and Broadwin, Rachel and Green, Shelley and Feng, Wen-Ying and Lipsett, Michael},
+	year = {2006},
+	month = {01},
+	date = {2006-01},
+	journal = {Environmental Health Perspectives},
+	pages = {29--33},
+	volume = {114},
+	number = {1},
+	doi = {10.1289/ehp.8335},
+	url = {https://ehp.niehs.nih.gov/doi/10.1289/ehp.8335},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{katsouyanni2001,
+	title = {Confounding and Effect Modification in the Short-Term Effects of Ambient Particles on Total Mortality: Results from 29 European Cities within the APHEA2 Project},
+	author = {Katsouyanni, Klea and Touloumi, Giota and Samoli, Evangelia and Gryparis, Alexandros and Le Tertre, Alain and Monopolis, Yannis and Rossi, Giuseppe and Zmirou, Denis and Ballester, Ferran and Boumghar, Azedine and Anderson, Hugh Ross and Wojtyniak, Bogdan and Paldy, Anna and Braunstein, Rony and Pekkanen, Juha and Schindler, Christian and Schwartz, Joel},
+	year = {2001},
+	month = {09},
+	date = {2001-09},
+	journal = {Epidemiology},
+	pages = {521},
+	volume = {12},
+	number = {5},
+	url = {https://journals.lww.com/epidem/fulltext/2001/09000/confounding_and_effect_modification_in_the.11.aspx},
+	langid = {canadian}
 }
