--- a/index.qmd
+++ b/index.qmd
@@ -100,6 +100,10 @@ The rest of the paper is organized as follows. In @sec-background, we review the
 
 # Background {#sec-background}
 
+## Decisions in data analysis 
+
+* Is "decision" going to be confusing with "data driven decision-making"
+
 <!-- Data analysis as an complicated, iterative process to make sense \[ref\] of the data collected. The iterative process of formulating hypothesis @jun2022. -->
 
 Choices are made at nearly every stage of data analysis, ranging from variable pre-processing variables, variable and lag selection in model formulation, to the specification of smoothing parameter during model construction. These possible choices contribute to what @gelman2014 describe as the "garden of forking paths". These choices can introduce substantial variability in results, which has been demonstrated in many-analyst experiments, where independent teams analyzing the same dataset to answer a pre-defined research question often arrive at markedly different conclusions. A prominent example is @silberzahn2018 where researchers reported a wide range of point estimates and 95% confidence intervals for the effect of soccer players’ skin tone on the number of red cards awarded by referees (odds ratio from 0.89 to 2.93). Similar findings have emerged in other domains, including structural equation modeling [@sarstedt2024], applied microeconomics [@huntington-klein2021], neuroimaging [@botvinik-nezer2020], and ecology and evolutionary biology [@gould2025].
@@ -116,18 +120,27 @@ Study decisions in data analysis:
 -   @liu2020 provides visualization to communicate the decision processes through the Analytic Decision Graphs (ADG)
 -   @simson2025 conducts a participatory AI study to demonstrate the "garden of forking paths" of decisions in data analysis and how it affects ML fairness
 
+## Air pollution mortality modelling
+
 # Extracting decisions from data analysis {#sec-extract-decisions}
 
 ## Decisions in data analysis {#sec-decisions}
 
-To record these decisions in a data structure, the tidy data principle @wickham2014 provides the guidance on how to structure the data where each variable should be in a column, each observation in a row. In the context of decisions made during data analysis, we adapt this principle to mean that each row represents a decision made by the authors of a paper and a paper often spans multiple decisions. 
+Decisions occur throughout the entire data analysis process -- from the selection of variables and data source, to pre-processing steps to prepare the data for modelling, to the model specification and variable inclusion. In this work, we focus specifically on modelling decisions in the air pollution mortality modelling literature. These include the choice of modelling approach, covariate inclusion and smoothing, and specifications of spatial and temporal structure. Consider the following excerpt from @ostro2006:
 
-- what constitute a decision in data analysis 
-- some decisions are related to how the variable is estimated spatially and temporally
-- model level decisions on how the model is estimated spatially (for multi-site analyses) and/or temporally (different treatments for years or seasons)
-- extract the exact text from the paper
+> Based on previous findings reported in the literature (e.g., Samet et al. 2000), the basic model included a smoothing spline for time with 7 degrees of freedom (df) per year of data. This number of degrees of freedom controls well for seasonal patterns in mortality and reduces and often eliminates autocorrelation.
 
-An example decisions may look as follows:
+This sentence encode the following components of a decision: 
+
+  * **variable**: time
+  * **method**: smoothing spline
+  * **parameter**: degree of freedom (df)
+  * **reason**: Based on previous findings reported in the literature (e.g., Samet et al. 2000); This number of degrees of freedom controls well for seasonal patterns in mortality and reduces and often eliminates autocorrelation.
+  * **decision**: 7 degrees of freedom (df) per year of data
+
+The decision above is regarding a certain parameter in the statistical method, we categorize this as a "parameter" type decisions. Other types of decisions - such as spatial modelling structure or the inclusion of temporal lags - may not include an explicit method or parameter, but still reference a variable and rationale, which we will provide further examples below. 
+
+To record these decisions, we follow the tidy data principle [@wickham2014], where each variable should be in a column, each observation in a row. In our context, each row represents a decision made by the authors of a paper and an analysis often include multiple decisions. To retain the original context of the decision, we extract the original text in the paper, without paraphrase or summarization, from the paper. Below we present an example of how to structure the decisions made in a paper, using the paper by @ostro2006:
 
 | Paper | ID | Model | variable | method | parameter | type | reason | decision |
 |--------|--------|--------|--------|--------|--------|--------|--------|--------|
@@ -136,7 +149,7 @@ An example decisions may look as follows:
 | ostro | 3 | Poisson regression | relative humidity | LOESS | smoothing parameter | parameter | to minimize Akaike's Information Criterion | NA |
 | ostro | 4 | Poisson regression | model | NA | NA | spatial | to account for variation among cities | separate regression models fit in each city |
 
-However, decisions statements are often implicit, and the justifications may not directly align with the decisions themselves. We identify four common anomalies: 
+Most decisions in the published papers are not explicitly stated, this could due to the  coherence and conciseness of the writing or authors' decision to include only necessary details. Here, we identify a few common anomalies where decisions may be combined or omit certain fields:
 
 1. **Authors may combine multiple decisions into a single sentence** for coherence and conciseness of the writing. Consider the following excerpt from @ostro2006:
 
@@ -168,7 +181,7 @@ In this case, while the method of selection (minimizing AIC) is specified, the a
 
 While decisions can be extracted manually from the literature, this process is labor-intensive and time-consuming. Recent advances in Large Language Models (LLMs) have demonstrated potential for automating the extraction of structured information from unstructured text \[ref\]. In this work, we use LLMs to automatically identify decisions made by authors during their data analysis processes. 
 
-Text recognition from PDF document relies on Optical Character Recognition (OCR) to convert scanned images into machine-readable text -- capability currently offered by Antropic Claude and Google Gemini. We instruct the LLM to generate a markdown file containing a JSON block that records extracted decisions, which can then be read into statistical software for further analysis. The exact prompt feed to the LLM is provided in the Appendix. The `ellmer` package [@ellmer] in R is used to connect to the Gemini and Claude API, providing the PDF attachment and the prompt in a markdown file as inputs. @fig-llm shows the overall workflow for decision extract using LLMs.
+Text recognition from PDF document relies on Optical Character Recognition (OCR) to convert scanned images into machine-readable text -- capability currently offered by Antropic Claude and Google Gemini. We instruct the LLM to generate a markdown file containing a JSON block that records extracted decisions, which can then be read into statistical software for further analysis. The exact prompt feed to the LLM is provided in the Appendix. The `ellmer` package [@ellmer] in R is used to connect to the Gemini and Claude API, providing the PDF attachment and the prompt in a markdown file as inputs. 
 
 ## Review the LLM output
 
